fixed header bug on small screens

--- a/app/modules/header/components/BurgerMenuButton/Burger.module.css
+++ b/app/modules/header/components/BurgerMenuButton/Burger.module.css
@@ -27,6 +27,7 @@
   width: 32px;
   height: 2px;
   position: absolute;
+  right: 0;
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
